# id2204

./: .gitignore  CMakeLists.txt  id2204.cbp  queens.cpp  sudoku.cpp  sudokusloppy.cpp
Uppgift1/: CMakeLists.txt  Uppgift1.cbp  queens.cpp  sudoku.cpp  sudokusloppy  sudokusloppy.cpp
Uppgift3/: CMakeLists.txt  no-overlap.cpp  slask.cpp  square.cpp
